# alfred-wake-word

./: .lints  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  config.toml
.github/workflows/: cd.yml  ci.yml
.github/workflows/scripts/: build_release.sh  get_version.sh  increment_version.sh
models/: alfred_it_linux_v3_0_0.ppn  alfred_it_mac_v3_0_0.ppn  alfred_it_raspberry-pi_v3_0_0.ppn
src/: main.rs
