[package]
name = "alfred-wake-word"
version = "0.1.0"
edition = "2021"

[dependencies]
pv_porcupine = "3.0.3"
pv_recorder = "1.2.2"
alfred-core = "0.1"
env_logger = "0.11.5"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
dbg_macro = "deny"
decimal_literal_representation = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
integer_division = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
print_stdout = "deny"
rest_pat_in_fully_bound_structs = "deny"
todo = "deny"
unimplemented = "deny"
unneeded_field_pattern = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"
unwrap_used = "deny"
or_fun_call = "deny"
expect_fun_call = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
missing_errors_doc = "allow"
